--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,16 @@
 version: "3.9"
 
-services: 
+services:
   app:
     build:
       context: .
       args:
         - DEV=true
-    ports: 
+    ports:
       - "8000:8000"
     volumes:
       - ./app:/app
+      - dev-static-data:/vol/web
     command: >
       sh -c "python manage.py wait_for_db &&
              python manage.py migrate &&
@@ -20,9 +21,9 @@ services:
       - DB_USER=devuser
       - DB_PASS=changeme
     depends_on:
-      - db 
+      - db
 
-  db: 
+  db:
     image: postgres:13-alpine
     volumes:
       - dev-db-data:/var/lib/postgresql/data/
@@ -33,3 +34,4 @@ services:
 
 volumes:
   dev-db-data:
+  dev-static-data:
